[gd_scene load_steps=6 format=3 uid="uid://8glpx4shx0n"]

[ext_resource type="Script" uid="uid://bqruhtc6plfr4" path="res://scripts/world_stuff/long_grass.gd" id="1_evyd8"]
[ext_resource type="Texture2D" uid="uid://p84ksucpanr5" path="res://assets/World_assets/world_stuff/long_grass1.png" id="2_hj6fc"]
[ext_resource type="Texture2D" uid="uid://d0etlpa0ye4b7" path="res://assets/World_assets/world_stuff/destroyed_long_grass1.png" id="3_tg1oe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ullnt"]
size = Vector2(219, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2thf"]
size = Vector2(237, 179)

[node name="long_grass" type="RigidBody2D" groups=["interactable"]]
y_sort_enabled = true
freeze = true
script = ExtResource("1_evyd8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(1, 1.18249)
texture = ExtResource("2_hj6fc")
offset = Vector2(0, -30)

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -16)
scale = Vector2(1, 1.18249)
texture = ExtResource("3_tg1oe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -31)
shape = SubResource("RectangleShape2D_ullnt")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, -49.5)
shape = SubResource("RectangleShape2D_g2thf")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
